[workspace]
members=[
  "auction/program",

  "gumdrop/program",
  "metaplex/program",
  "token-entangler/program",
  "token-vault/program",
  "token-vault/test",
  "nft-packs/program",
  "fixed-price-sale/program"
]
exclude = [
  "fixed-price-sale/cli",
  "token-metadata",
  "auction-house/program",
  "candy-machine/program"
]
