[package]
name = "gumdrop"
version = "0.0.1"
description = "A Solana program for distributing tokens and NFTs according to a Merkle root."
authors = [
    "Lawrence Wu <larry.wu@solana.com>",
]
keywords = ["solana"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gumdrop"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"
solana-program = "1.7.11"
spl-associated-token-account = { version = "1.0.3", features = [
    "no-entrypoint"
] }
metaplex-token-metadata = { path = "../token-metadata/program", features = [
    "no-entrypoint"
] }
