[package]
name = "spl-auction-test-client"
version = "0.1.0"
description = "Metaplex Library Auction Test Client"
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex"
license = "Apache-2.0"
edition = "2018"
publish = false

[dependencies]
bincode = "1.3.2"
borsh = "0.9.1"
clap = "2.33.3"
rand = "*"
solana-clap-utils = "1.6"
solana-cli-config = "1.6"
solana-client = "1.7.11"
solana-program = "1.7.11"
solana-sdk = "1.7.11"
spl-auction = { path = "../program", features = [ "no-entrypoint" ] }
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
