[package]
name = "metaplex-auction"
version = "0.0.1"
description = "Solana Auction Program"
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex"
license = "Apache-2.0"
edition = "2018"
exclude = ["tests/**"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
arrayref = "0.3.6"
solana-program = "1.7.11"
solana-gateway = { git = "https://github.com/identity-com/on-chain-identity-gateway", branch = "develop", features = [ "no-entrypoint" ] }
metaplex-shared = { path = "../../shared" }
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
thiserror = "1.0"

[dev-dependencies]
solana-gateway-program = { git = "https://github.com/identity-com/on-chain-identity-gateway", branch = "develop", features = [ "no-entrypoint" ] }
solana-program-test = "1.7.11"
solana-sdk = "1.7.11"

[lib]
crate-type = ["cdylib", "lib"]
