[workspace]
[package]
name = "mpl-candy-machine"
version = "3.1.4"
description = "NFT Candy Machine v2: programmatic and trustless NFT drops."
authors = ["Jordan Prince", "Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license = "AGPL-3.0"
edition = "2018"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "=0.21.0"
arrayref = "0.3.6"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.3", features = [
  "no-entrypoint",
] }
anchor-spl = "=0.21.0"
solana-program = "1.9.6"
solana-gateway = "0.1.1"
