[package]
name = "mpl-fixed-price-sale"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_fixed_price_sale"

[features]
no-entrypoint = []
test-bpf = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version="~0.22", features=["init-if-needed"]}
anchor-spl = {version="~0.22"}
spl-token = "~3.2.0"
mpl-token-metadata = { features = [ "no-entrypoint" ], version="~1.1.0" }

[dev-dependencies]
anchor-client = "~0.22"
solana-program-test = "~1.9.5"
solana-program = "~1.9.5"
solana-sdk = "~1.9.5"
spl-associated-token-account = "~1.0.3"
