[package]
name = "spl-graphql-server-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
futures = "0.3.1"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
async-stream = "0.3"
spl-graphql-server = { path = "../program" }
juniper = "0.15"
juniper_graphql_ws = "0.3.0"
juniper_warp = { version = "0.7.0", features = ["subscriptions"] }
