[package]
name = "spl-graphql-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.4.0"
env_logger = "0.8"
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
juniper = "0.15"
solana-client = "1.7.11"
solana-program = "=1.7.11"
spl-token-vault = { path = "../../token-vault/program", features = [ "no-entrypoint" ] }
spl-token-metadata = { path = "../../token-metadata/program", features = [ "no-entrypoint" ] }

[lib]
crate-type = ["lib"]
