[package]
name = "metaplex"
version = "0.0.1"
description = "Metaplex"
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
metaplex-auction = { path = "../../auction/program", features = [ "no-entrypoint" ], version="0.0.1" }
num-derive = "0.3"
num-traits = "0.2"
arrayref = "0.3.6"
solana-program = "1.7.11"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
metaplex-token-vault = { path = "../../token-vault/program", features = [ "no-entrypoint" ], version="0.0.1" }
metaplex-token-metadata = { path = "../../token-metadata/program", features = [ "no-entrypoint" ], version="0.0.1" }
thiserror = "1.0"
borsh = "0.9.1"

[lib]
crate-type = ["cdylib", "lib"]
