[package]
name = "mpl-nft-packs"
version = "0.1.0"
edition = "2018"
license = "AGPL-3.0"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "~0.3"
num-traits = "~0.2"
num_enum = "~0.5.4"
solana-program = "~1.9.5"
thiserror = "~1.0"
borsh = "~0.9.1"
spl-math = { version = "~0.1", features = [ "no-entrypoint" ] }
spl-token = { version="~3.2.0", features = [ "no-entrypoint" ] }
mpl-metaplex = { path = "../../metaplex/program", features = ["no-entrypoint"] }
mpl-token-metadata = { version="~1.1.0", features = [ "no-entrypoint" ] }
mpl-token-vault = { path = "../../token-vault/program", features = [ "no-entrypoint" ] }
arrayref = "0.3.6"

[dev-dependencies]
solana-program-test = "~1.9.5"
solana-sdk = "~1.9.5"
rand = { version="~0.8.4" }

[lib]
crate-type = ["cdylib", "lib"]
