[package]
name = "mpl-token-entangler"
version = "0.1.2"
edition = "2018"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_token_entangler"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "~0.24.1"
anchor-spl = "~0.24.1"
spl-token = { version = "~3.2",  features = ["no-entrypoint"] }
spl-associated-token-account = {version = "~1.0.3", features = ["no-entrypoint"]}
mpl-token-metadata = { version="~1.2.7", features = [ "no-entrypoint" ], path="../../token-metadata/program" }
thiserror = "~1.0"
arrayref = "~0.3.6"