[package]
name = "mpl-token-metadata"
version = "1.2.7"
description = "Metaplex Metadata"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license = "AGPL-3.0"
edition = "2021"
readme = "README.md"


[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "~0.3"
arrayref = "~0.3.6"
num-traits = "~0.2"
solana-program = "~1.9.15"
mpl-token-vault = { version = "~0.1.0", features = [ "no-entrypoint" ] }
spl-token = { version="~3.2.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "~1.0.3", features = ["no-entrypoint"] }
thiserror = "~1.0"
borsh = "~0.9.2"
shank = { version = "~0.0.1" }

[dev-dependencies]
solana-sdk = "~1.9.15"
solana-program-test = "~1.9.15"

[lib]
crate-type = ["cdylib", "lib"]
