[package]
name = "mpl-token-vault"
version = "0.1.1"
description = "Metaplex Token Vault"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license = "AGPL-3.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "~0.3"
num-traits = "~0.2"
solana-program = "~1.9.15"
spl-token = { version="~3.2.0", features = [ "no-entrypoint" ] }
shank="~0.0.1"
thiserror = "~1.0"
borsh = "~0.9.1"

[lib]
crate-type = ["cdylib", "lib"]
