[package]
name = "mpl-testing-utils"
version = "0.0.2"
edition = "2018"
description = "Metaplex Metadata"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license = "AGPL-3.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
anchor-client = "~0.24.1"
shellexpand = "~2.1.0"
serde_json = "~1.0"
solana-program-test = "~1.9.15"
solana-program = "~1.9.15"
solana-sdk = "~1.9.15" 
spl-token = { version = "~3.2",  features = ["no-entrypoint"] }
spl-associated-token-account = { version = "~1.0.3",  features = ["no-entrypoint"] }
mpl-token-metadata = { version="~1.1.0", features = [ "no-entrypoint" ] }
mpl-token-vault = { version = "~0.1.1", path = "../../../token-vault/program", features = [ "no-entrypoint" ] }
rand = "~0.7.3"
num = "~0.4"
num-derive = "~0.3"
num-traits = "~0.2"
borsh = "~0.9.1"
